# rusty-metal-hashes

./: Cargo.toml  README.md
src/: main.rs  sha256.rs
